--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: M4Bot
-description: Professional audiobook converter for Mac. Convert MP3, WAV, and M4A files to M4B format with chapters and metadata.
+description: Audiobook converter for Mac. Convert MP3, WAV, and M4A files to M4B format with chapters and metadata.
 url: "https://c0dedbear.github.io"
 baseurl: "/m4bot-app"
 
